--- a/css/styles.css
+++ b/css/styles.css
@@ -3,35 +3,66 @@ body{
 margin: 0;
 text-align: center;
 font-family: 'Merriweather', serif;
+color: #40514E;
 }
 
 h1{
-margin-top: 0;
+margin: 50px auto 0 auto;
 font-family: 'Sacramento', cursive;
+font-size: 5.625rem;
+color: #66BFBF;
+/*
+100% equivelent to 16px equal to 1em
+*/
 }
 
 h2{
   font-family: 'Montserrat', sans-serif;
+  font-size: 2.5rem;
+  color: #66BFBF;
+  padding-bottom: 10px;
 }
 
 h3{
   font-family: 'Montserrat', sans-serif;
+  color: #11999E;
 }
 
+a{
+  color: #11999E;
+  font-family: 'Montserrat', sans-serif;
+  margin: 10px 30px;
+  text-decoration: none;
+}
+
+a:hover{
+  color: #EAF6F6;
+}
+
+hr{
+  border: dotted #EAF6F6 6px;
+  border-bottom: none;
+  width: 4%;
+  margin: 100px auto;
+}
+
+p{
+    line-height: 2;
+}
 /* Class Selector */
 .top-container{
-  background-color: #E4F9F5;
+  background-color: #EAF6F6;
   position: relative;
-  padding-top: 10%;
-  height: 100%;
+  padding-top: 5%;
 }
 
 .middle-container{
-padding-top: 10px;
-
+margin: 100px 0;
 }
 
 .bottom-container{
+background-color: #66BFBF;
+padding: 50px 0 20px;
 
 
 }
@@ -43,18 +74,86 @@ padding-top: 10px;
 .top-cloud{
   position: absolute;
   right: 300px;
-  top: 50px;
+  top: 40px;
 }
 
 .bottom-cloud{
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300px;
 }
 
-.headshot{
-  height: 300px;
-  width: 300px;
+.headshot-img{
+  width: 15%;
+}
+
+.rover-img{
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+}
+
+.nature-img{
+  float: right;
+  width: 25%;
+  margin-left: 30px;
+}
+
+.a-programmer{
+  font-weight: normal;
+}
+
+.skill-row{
+  width: 50%;
+  margin: 100px auto;
+  text-align: left;
+}
+
+.intro-p{
+  width: 30%;
+  margin: auto;
+}
+
+.contact-message{
+  width: 40%;
+  margin: 40px auto 60px;
+}
+
+.btn {
+  background: #11CDD4;
+  background-image: -webkit-linear-gradient(top, #11CDD4, #11999e);
+  background-image: -moz-linear-gradient(top, #11CDD4, #11999e);
+  background-image: -ms-linear-gradient(top, #11CDD4, #11999e);
+  background-image: -o-linear-gradient(top, #11CDD4, #11999e);
+  background-image: linear-gradient(to bottom, #11CDD4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+
+.copyright{
+  color: #EAF6F6;
+  font-size: 0.75rem;
+  padding: 20px 0;
+}
+
+.footer-link{
+  font-size: 1.3rem;
 }
 /*
 so let there be light
